--- a/src/gill_kristin_esm244_a1_t1.Rmd
+++ b/src/gill_kristin_esm244_a1_t1.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Sierra Amphibians"
+title: "Sierra Nevada, CA Mountain Yellow-legged Frogs (*Rana muscosa*)"
 author: "Kristin Gill"
 date: "1/15/2021"
 output: html_document
